# Nadir

./: .gitignore  README.md  pyproject.toml  pyproject.toml   requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: python-package.yml  python-publish.yml
examples/: advanced_usage.py  compression_usage.ipynb  gemini_complextiy_analyzer.ipynb  latency_test.ipynb  openai_useage.ipynb  simple_usage.py
examples/evaluator/: llm.py
nadir/complexity/: code.py  llm_code.py
nadir/compression/: gemini.py
nadir/config/pricing/: openai.yaml
nadir/cost/: tracker.py
nadir/llm_selector/: core.py
nadir/llm_selector/providers/: deepseek.py  gemini.py  huggingface.py  openai.py
nadir/llm_selector/selector/: auto.py  budget_friendly.py
nadir/utils/: __init__.py
scripts/: benchmark.py  train_complexity_model.py
src/complexity/: __init__.py  analyzer.py  code.py  gemini.py  llm.py  llm_code.py
src/complextiy/: __init__.py  advance.py  analyzer.py  code.py  gemini.py
src/compression/: __init__.py  code.py  fast.py  gemini.py  openai.py  prompt.py
src/config/: settings.py
src/config/pricing/: anthropic.yaml
src/cost/: tracker.py
src/llm_selector/: complexity_analyzer.py  core.py  model_registry.py
src/llm_selector/providers/: __init__.py  (+6 more)
src/utils/: __init__.py
tests/: test_complexity.py  test_compression.py  test_cost_tracking.py  test_gemini_complexity.py  test_gemini_complexity_analyzer.py  test_llm_complexity.py  test_model_selection.py  test_preformance_config_loader  test_providers.py
tests/assets/: model_performance.json
(+28 files in other folders)
