[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nadir-llm"
description = "Dynamic LLM Model Selector based on Prompt Complexity"
keywords = ["LLM", "model selection", "prompt", "complexity"]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dynamic = ["version"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
authors = [
  { name = "Dor Amir", email = "amirdor@gmail.com" }
]
dependencies = [
  "tiktoken>=0.5.0",
  "anthropic>=0.20.0",
  "openai>=1.0.0",
  "transformers>=4.35.0",
  "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "mypy>=1.0.0",
  "black>=23.0.0"
]

[tool.setuptools.packages.find]
where = ["nadir"]
namespaces = false
